fix: modify navbar panel overflow

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -72,7 +72,7 @@ body {
     left: 0%;
     top: 100%;
     background: #ffffff;
-    height: calc(100vh - 100%);
+    height: auto;
     width: 100vw;
     padding: 0.5rem;
     display: flex;
@@ -86,7 +86,7 @@ body {
     position: absolute;
     left: -100%;
     background: #ffffff;
-    height: calc(100vh - 100%);
+    height: auto;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -183,7 +183,7 @@ body {
     top: inherit;
     left: 95%;
     padding: 6px;
-    margin-top: -41px;
+    margin-top: -40px;
     width: auto;
     background-color: white;
     border: 0.1px solid rgba(0, 0, 0, 0.2);
