--- a/src/assets/sass/component/_navbar.scss
+++ b/src/assets/sass/component/_navbar.scss
@@ -57,7 +57,7 @@
         left: 0%;
         top: 100%;
         background: $white;
-        height: calc(100vh - 100%);
+        height: auto;
         width: 100vw;
         padding: 0.5rem;
         display: flex;
@@ -72,7 +72,7 @@
         position: absolute;
         left: -100%;
         background: $white;
-        height: calc(100vh - 100%);
+        height: auto;
         width: 100vw;
 
         display: flex;
@@ -183,7 +183,7 @@
         top: inherit;
         left: 95%;
         padding: 6px;
-        margin-top: -41px;
+        margin-top: -40px;
         width: auto;
         background-color: white;
         border: 0.1px solid rgba(0, 0, 0, 0.2);
